syntax = "proto3";

package pb;

// protoc -I=. *.proto --go_out=plugins=grpc:.

message HelloRequest {
    string greeting = 1;
}

message HelloResponse {
    string reply = 1;
}

service HelloService {
    rpc SayHello(HelloRequest) returns (HelloResponse);
}
